#379 closed bug (fixed)
[Deskbar] crash sometimes while VDG
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
It was several years now, i have this crash on R5 and now it in Haiku, sweet :-) Deskbar crash if i do Volcan Death Grep with ctrl+alt+shift+z.
Attachments (1)
Change History (6)
comment:1 by , 19 years ago
Summary: | [Deskbar] crash sometimes while WDG → [Deskbar] crash sometimes while VDG |
---|
comment:2 by , 19 years ago
comment:3 by , 19 years ago
Status: | new → closed |
---|
comment:4 by , 19 years ago
Resolution: | → fixed |
---|
comment:5 by , 19 years ago
bug_group: | → developers |
---|
Note:
See TracTickets
for help on using tickets.
ctrl-alt-shit-z? Vulcan death grip is command-option-shit + click. Anyway, now that you told me, I've fixed this :)
The OpenTracker project has its own bug tracker, could you use if for bugs that happen under both platforms? http://sourceforge.net/tracker/?atid=416230&group_id=36106&func=browse