Since SF cannot be reached currently, this fix gets into the Haiku tree first: ExpandoMenuBar::ItemAtPoint() was broken, which could cause a crash when doing the "vulcan death grip" over a window item. This fixes bug #379.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16964 a95241bf-73f2-0310-859d-f6bbb57e9c96